# postgresimporter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Pipfile  README.md  pre-commit.sh  requirements.txt  setup.cfg  setup.py  tag.sh  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
deployment/: README.md  postgres.compose.yml  postgresimporter.compose.yml
postgresimporter/: cli.py  csvcount.py  exec.py  import.py  main.py  utils.py
postgresimporter/hooks/: functions.sql
postgresimporter/tests/: common.py  run_tests.py  test_cli.py  test_load.py  test_runner.py  test_unzip.py
