[bumpversion]
current_version = 1.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:postgresimporter/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
description-file = README.md

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
files = postgresimporter
ignore_missing_imports = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
no_warn_unused_configs = true
warn_unused_configs = true
disallow_untyped_decorators = true
